Fix/remove malformed assert in os_windows.cpp

XMLWordPrintable

    • b17
    • 14
    • b18
    • windows

        The change for JDK-8191521 introduced an assert statement that has an incorrect number of parameters:
        https://hg.openjdk.java.net/jdk/jdk/rev/ed5e399d967d#l1.51

        An assert usually has a condition on which to assert and as second parameter an informational string that might have a va_list.

              Assignee:
              Christoph Langer
              Reporter:
              Christoph Langer
              Votes:
              0 Vote for this issue
              Watchers:
              2 Start watching this issue

                Created:
                Updated:
                Resolved: