8231885: Fix/remove malformed assert in os_windows.cpp

Reviewed-by: dcubed, stuefe, kbarrett